2005-06-01  Sven de Marothy  <sven@physto.se>

	* java/util/GregorianCalendar.java
	(setTimeInMillis): Recompute time fields.

2005-06-01  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* org/omg/CosNaming/BindingType.java,
	org/omg/CosNaming/NameComponent.java,
	org/omg/CosNaming/_BindingIteratorStub.java,
	org/omg/CosNaming/_NamingContextStub.java,
    org/omg/CosNaming/_NamingContextExtStub.java,	
	org/omg/CosNaming/_BindingIteratorImplBase.java,
	org/omg/CosNaming/_NamingContextImplBase.java: Added SerialVersionUID.

2005-06-01  Audrius Meskauskas <AudriusA@Bioinformatics.org>
	
	* org/omg/CosNaming/IstringHelper.java: New class.

2005-06-01  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* gnu/CORBA/CDR/cdrInput.java (read_wstring): Correcting
	check for native encoding.

2005-06-01  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicFileChooserUI.java
	(installComponents): Changed layout of main panel from GridBagLayout
	to BorderLayout (as is the case in Suns JDK). This fixes
	bug#13244.

2005-06-01  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* gnu/CORBA/Functional_ORB.java (serveStep),
	gnu/CORBA/gnuRequest.java (submit),
	gnu/CORBA/CDR/cdrInput.java (read_encapsulation): Correcting
	data read loop.

2005-06-01  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* gnu/CORBA/Functional_ORG.java (getFreePort): Remember
	the port number in the local variable.

2005-06-01  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* examples/gnu/classpath/examples/CORBA/SimpleCommunication/
	communication/ourUserExceptionHelper.java (extract): New method.
	* examples/gnu/classpath/examples/CORBA/SimpleCommunication/
	communication/RequestTest.java:Use helper extract method.

2005-06-01  Roman Kennke  <roman@kennke.org>

	* javax/swing/JPopupMenu.java
	(insert): Do not check for index == -1 at this point, this is done
	in java.awt.Container. Catching -1 indices here disturbes the
	Container.addImpl which leads to bug #13247 for example.
